--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <div class="row min-vh-100 align-items-center text-center text-md-left">
 
         <div class="col-md-6 pr-md-5" data-aos="zoom-in">
-            <img src="images/home-img.svg" width="100%" alt="">
+            <img src="home-img.svg" width="100%" alt="">
         </div>
 
         <div class="col-md-6 pl-md-5 content" data-aos="fade-left">
@@ -129,32 +129,32 @@
 <div class="box-container">
 
     <div class="box" data-aos="zoom-in">
-        <a href="images/img-1.jpg" title="our staff">
+        <a href="img-1.jpg" title="our staff">
             <img src="images/img-1.jpg" alt="">
         </a>
     </div>
 
     <div class="box" data-aos="zoom-in">
         <a href="images/img-2.jpg" title="emergency rooms">
-            <img src="images/img-2.jpg" alt="">
+            <img src="img-2.jpg" alt="">
         </a>
     </div>
 
     <div class="box" data-aos="zoom-in">
         <a href="images/img-3.jpg" title="expert doctors">
-            <img src="images/img-3.jpg" alt="">
+            <img src="img-3.jpg" alt="">
         </a>
     </div>
 
     <div class="box" data-aos="zoom-in">
         <a href="images/img-4.jpg" title="medical equipments">
-            <img src="images/img-4.jpg" alt="">
+            <img src="img-4.jpg" alt="">
         </a>
     </div>
 
     <div class="box" data-aos="zoom-in">
         <a href="images/img-5.jpg" title="our support">
-            <img src="images/img-5.jpg" alt="">
+            <img src="img-5.jpg" alt="">
         </a>
     </div>
 
@@ -166,19 +166,19 @@
 
     <div class="box" data-aos="zoom-in">
         <a href="images/img-7.jpg" title="medical equipments">
-            <img src="images/img-7.jpg" alt="">
+            <img src="img-7.jpg" alt="">
         </a>
     </div>
 
     <div class="box" data-aos="zoom-in">
         <a href="images/img-8.jpg" title="our expert staff">
-            <img src="images/img-8.jpg" alt="">
+            <img src="img-8.jpg" alt="">
         </a>
     </div>
 
     <div class="box" data-aos="zoom-in">
         <a href="images/img-9.jpg" title="online support">
-            <img src="images/img-9.jpg" alt="">
+            <img src="img-9.jpg" alt="">
         </a>
     </div>
 
@@ -204,21 +204,21 @@
         <p>Staff was very cordial, proper instructions were given, proper pre checkup and follow-ups were done. Woould definitely recommend it to my friends and family ...keep it up guys!</p>
         <h3>Meera , Kandivali (E)</h3>
         <span>jan 5, 2020</span>
-        <img src="images/pic-1.jpeg" alt="">
+        <img src="pic-1.jpeg" alt="">
     </div>
 
     <div class="box" data-aos="fade-up">
         <p>Really good staff ..,staff is friendly and helpful and doctor was very humble and she has not advised any unnecessary tests and antiboitics . Her priscription was very effective.</p>
         <h3>Shridhar , Goregaon (w)</h3>
         <span>March 19, 2021</span>
-        <img src="images/pic-2.jpeg" alt="">
+        <img src="pic-2.jpeg" alt="">
     </div>
 
     <div class="box" data-aos="fade-left">
         <p>I live in US and signed up to the subscription service for my parents on one of my trips back.I was quite sceptical but was surprised by the quality of service provided. The physiotherapist came home and insisted on working with my mother and getting her to exercise . The nurse always shows up on time for monthly blood draws.I now recommend HealthCare alot.</p>
         <h3>Meghna , Bandra (E)</h3>
         <span>July 27, 2021</span>
-        <img src="images/pic-3.jpeg" alt="">
+        <img src="pic-3.jpeg" alt="">
     </div>
 
 </div>
@@ -326,7 +326,7 @@
         <div class="box-container">
 
             <div class="box" data-aos="fade-right">
-                <img src="images/img-10.jpg" alt="">
+                <img src="img-10.jpg" alt="">
                 <div class="content">
                     <span>Dec 25, 2019</span>
                     <a href="#"><h3>Bowie Blade Readers Choice Award.</h3></a>
@@ -336,7 +336,7 @@
             </div>
 
             <div class="box" data-aos="fade-up">
-                <img src="images/img-11.jpg" alt="">
+                <img src="img-11.jpg" alt="">
                 <div class="content">
                     <span>jan 5, 2020</span>
                     <a href="#"><h3>2020 Wellness at Work Awards – a statewide honor.</h3></a>
@@ -346,7 +346,7 @@
             </div>
 
             <div class="box" data-aos="fade-left">
-                <img src="images/img-12.jpg" alt="">
+                <img src="img-12.jpg" alt="">
                 <div class="content">
                     <span>jan 5, 2021</span>
                     <a href="#"><h3>Cardiac Rehabilitation Program </h3></a>
