--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         </div>
 
         <div class="col-md-6 d-none d-md-block" data-aos="fade-left">
-            <img src="images/about-img.png" width="100%" alt="">
+            <img src="about-img.png" width="100%" alt="">
         </div>
 
     </div>
@@ -130,54 +130,54 @@
 
     <div class="box" data-aos="zoom-in">
         <a href="img-1.jpg" title="our staff">
-            <img src="images/img-1.jpg" alt="">
+            <img src="img-1.jpg" alt="">
         </a>
     </div>
 
     <div class="box" data-aos="zoom-in">
-        <a href="images/img-2.jpg" title="emergency rooms">
+        <a href="img-2.jpg" title="emergency rooms">
             <img src="img-2.jpg" alt="">
         </a>
     </div>
 
     <div class="box" data-aos="zoom-in">
-        <a href="images/img-3.jpg" title="expert doctors">
+        <a href="img-3.jpg" title="expert doctors">
             <img src="img-3.jpg" alt="">
         </a>
     </div>
 
     <div class="box" data-aos="zoom-in">
-        <a href="images/img-4.jpg" title="medical equipments">
+        <a href="img-4.jpg" title="medical equipments">
             <img src="img-4.jpg" alt="">
         </a>
     </div>
 
     <div class="box" data-aos="zoom-in">
-        <a href="images/img-5.jpg" title="our support">
+        <a href="img-5.jpg" title="our support">
             <img src="img-5.jpg" alt="">
         </a>
     </div>
 
     <div class="box" data-aos="zoom-in">
-        <a href="images/img-6.jpg" title="medical equipments">
-            <img src="images/img-6.jpg" alt="">
+        <a href="img-6.jpg" title="medical equipments">
+            <img src="img-6.jpg" alt="">
         </a>
     </div>
 
     <div class="box" data-aos="zoom-in">
-        <a href="images/img-7.jpg" title="medical equipments">
+        <a href="img-7.jpg" title="medical equipments">
             <img src="img-7.jpg" alt="">
         </a>
     </div>
 
     <div class="box" data-aos="zoom-in">
-        <a href="images/img-8.jpg" title="our expert staff">
+        <a href="img-8.jpg" title="our expert staff">
             <img src="img-8.jpg" alt="">
         </a>
     </div>
 
     <div class="box" data-aos="zoom-in">
-        <a href="images/img-9.jpg" title="online support">
+        <a href="img-9.jpg" title="online support">
             <img src="img-9.jpg" alt="">
         </a>
     </div>
